00-bootstrap/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true",
    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
spec:
  ingressClassName: "traefik"
  rules:
    - host: argocd.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
